--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
             "username": "tux",
             "password": "licet@123"
         }
-    ]
+    ],
+    "python.pythonPath": "d:\\Documents\\syndeo-be\\venv\\Scripts\\python.exe"
 }
